pixmapdir = $(datadir)/$(PACKAGE_NAME)/pixmaps
pixmap_DATA = \
    mode-browse-16.png \
    mode-browse-22.png \
    mode-browse-24.png \
    mode-browse-32.png \
    mode-browse.svg \
    mode-image-edit-16.png \
    mode-image-edit-22.png \
    mode-image-edit-24.png \
    tag-16.png \
    tag-22.png \
    tag-new-16.png \
    tag-new-22.png \
    tag-new-24.png

uidir = $(datadir)/$(PACKAGE_NAME)/ui
ui_DATA = \
    solang.ui \
    solang-tag-manager.ui \
    solang-importer.ui \
    solang-thumbnail-popup.ui

EXTRA_DIST = \
    $(pixmap_DATA) \
    $(ui_DATA)
