layoutdir = $(datadir)/$(PACKAGE_TARNAME)
layout_DATA = \
    solang-layout.xml

pixmapdir = $(datadir)/$(PACKAGE_TARNAME)/pixmaps
pixmap_DATA = \
    mode-browse-16.png \
    mode-browse-22.png \
    mode-browse-24.png \
    mode-browse-32.png \
    mode-browse.svg \
    mode-image-edit-16.png \
    mode-image-edit-22.png \
    mode-image-edit-24.png \
    tag-16.png \
    tag-22.png \
    tag-new-16.png \
    tag-new-22.png \
    tag-new-24.png

uidir = $(datadir)/$(PACKAGE_TARNAME)/ui
ui_DATA = \
    solang.ui \
    solang-enlarged-renderer.ui \
    solang-tag-manager.ui \
    solang-importer.ui \
    solang-thumbnail-popup.ui

EXTRA_DIST = \
    $(layout_DATA) \
    $(pixmap_DATA) \
    $(ui_DATA)
