layoutdir = $(datadir)/$(PACKAGE_TARNAME)
layout_DATA = \
	solang-layout.xml

pixmapdir = $(datadir)/$(PACKAGE_TARNAME)/pixmaps
pixmap_DATA = \
	camera-photo-16.png \
	camera-photo-22.png \
	camera-photo-24.png \
	camera-photo-32.png \
	camera-photo.svg \
	flickr.png \
	flip-object-horizontal.png \
	flip-object-vertical.png \
	object-rotate-left.png \
	object-rotate-right.png \
	mode-browse-16.png \
	mode-browse-22.png \
	mode-browse-24.png \
	mode-browse-32.png \
	mode-browse.svg \
	mode-image-edit-16.png \
	mode-image-edit-22.png \
	mode-image-edit-24.png \
	stock-resize-16.png \
	slideshow-play-16.png \
	slideshow-play-22.png \
	slideshow-play-24.png \
	slideshow-play-32.png \
	slideshow-play-48.png \
	slideshow-play.svg \
	tag-16.png \
	tag-22.png \
	tag-new-16.png \
	tag-new-22.png \
	tag-new-24.png \
	view-far-16.png \
	view-far-22.png \
	view-far-24.png \
	view-near-16.png \
	view-near-22.png \
	view-near-24.png

uidir = $(datadir)/$(PACKAGE_TARNAME)/ui
ui_DATA = \
	solang.ui \
	solang-browser-renderer.ui \
	solang-browser-renderer-thumbnail.ui \
	solang-editor.ui \
	solang-editor-renderer.ui \
	solang-enlarged-renderer.ui \
	solang-tag-manager.ui \
	solang-importer.ui \
	solang-slideshow.ui \
	solang-slideshow-renderer.ui \
	solang-thumbnail-popup.ui

EXTRA_DIST = \
	$(layout_DATA) \
	$(pixmap_DATA) \
	$(ui_DATA)
