include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = @PACKAGE_TARNAME@
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/main-window.png

DOC_PAGES = \
	export_folder.page \
	import.page \
	tags_use.page \
	index.page \
	photos_by_page.page \
	intro.page \
	tags_intro.page \
	howto_search.page \
	keys.page \
	tags_manage.page

DOC_LINGUAS =

dist-hook: doc-dist-hook
